# g2o-BA

./: CMakeLists.txt  README.md  ba.cpp  ba2.cpp  main.cpp
